--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3"
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.4",
+    "prettier-eslint": "^16.2.0"
   }
 }
