--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 2,
     "name": "Copy URL on Hover",
     "version": "0.0.1",
-    "description": "Hover over a link and hit CTRL + C to copy the link address - or hit CTRL + C to copy the link text.",
+    "description": "Hover over a link and hit CTRL + S to copy the link address - or hit CTRL + S to copy the link text.",
     "content_scripts": [
         {
         "matches": ["<all_urls>"],
